5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1671_1107.log
== TEST (2019-04-28 16:05:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Entre com o numero do dia de hoje: "))
y = int(input("Entre com o numero de dias apos hoje: "))


if(x==0):
	print("domingo")
elif(x==1):
	print("segunda")
elif(x==2):
	print("terca")
elif(x==3): 
	print("quarta")
elif(x==4):
	print("quinta")
elif(x==5):
	print("sexta")
elif(x==6):
	print("sabado")
else:
	print("A entrada", x ,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:05:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Entre com o numero do dia de hoje: "))
y = int(input("Entre com o numero de dias apos hoje: "))


if(x==0):
	print("domingo")
elif(x==1):
	print("segunda")
elif(x==2):
	print("terca")
elif(x==3): 
	print("quarta")
elif(x==4):
	print("quinta")
elif(x==5):
	print("sexta")
elif(x==6):
	print("sabado")
else:
	print("A entrada", x ,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:06:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Entre com o numero do dia de hoje: "))
y = int(input("Entre com o numero de dias apos hoje: "))


if(x==0):
	print("domingo")
elif(x==1):
	print("segunda")
elif(x==2):
	print("terca")
elif(x==3): 
	print("quarta")
elif(x==4):
	print("quinta")
elif(x==5):
	print("sexta")
elif(x==6):
	print("sabado")
else:
	print("A entrada", x ,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:09:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Entre com o numero do dia de hoje: "))
y = int(input("Entre com o numero de dias apos hoje: "))

if(x%y != 0):
	if(x==0):
		print("domingo")
	elif(x==1):
		print("segunda")
	elif(x==2):
		print("terca")
	elif(x==3): 
		print("quarta")
	elif(x==4):
		print("quinta")
	elif(x==5):
		print("sexta")
	elif(x==6):
		print("sabado")
	else:
		print("A entrada", x ,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:10:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Entre com o numero do dia de hoje: "))
y = int(input("Entre com o numero de dias apos hoje: "))

if(0 <= x%y = 6):
	if(x==0):
		print("domingo")
	elif(x==1):
		print("segunda")
	elif(x==2):
		print("terca")
	elif(x==3): 
		print("quarta")
	elif(x==4):
		print("quinta")
	elif(x==5):
		print("sexta")
	elif(x==6):
		print("sabado")
	else:
		print("A entrada", x ,"eh invalida")

-- ERROR:
File "XXXX", line 7
    if(0 <= x%y = 6):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:11:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Entre com o numero do dia de hoje: "))
y = int(input("Entre com o numero de dias apos hoje: "))
z = x%y
if(0 <= z = 6):
	if(x==0):
		print("domingo")
	elif(x==1):
		print("segunda")
	elif(x==2):
		print("terca")
	elif(x==3): 
		print("quarta")
	elif(x==4):
		print("quinta")
	elif(x==5):
		print("sexta")
	elif(x==6):
		print("sabado")
	else:
		print("A entrada", x ,"eh invalida")

-- ERROR:
File "XXXX", line 7
    if(0 <= z = 6):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:11:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Entre com o numero do dia de hoje: "))
y = int(input("Entre com o numero de dias apos hoje: "))
z = x%y
if(0 <= z) and (z = 6):
	if(x==0):
		print("domingo")
	elif(x==1):
		print("segunda")
	elif(x==2):
		print("terca")
	elif(x==3): 
		print("quarta")
	elif(x==4):
		print("quinta")
	elif(x==5):
		print("sexta")
	elif(x==6):
		print("sabado")
	else:
		print("A entrada", x ,"eh invalida")

-- ERROR:
File "XXXX", line 7
    if(0 <= z) and (z = 6):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:11:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Entre com o numero do dia de hoje: "))
y = int(input("Entre com o numero de dias apos hoje: "))
z = x%y
if(0 <= z) and (z <= 6):
	if(x==0):
		print("domingo")
	elif(x==1):
		print("segunda")
	elif(x==2):
		print("terca")
	elif(x==3): 
		print("quarta")
	elif(x==4):
		print("quinta")
	elif(x==5):
		print("sexta")
	elif(x==6):
		print("sabado")
	else:
		print("A entrada", x ,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:14:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Entre com o numero do dia de hoje: "))
y = int(input("Entre com o numero de dias apos hoje: "))
z = x%y
if(0 <= z) and (z <= 6):
	print("Hoje eh", x ,"e o dia futuro eh", y)
	if(x==0):
		print("domingo")
	elif(x==1):
		print("segunda")
	elif(x==2):
		print("terca")
	elif(x==3): 
		print("quarta")
	elif(x==4):
		print("quinta")
	elif(x==5):
		print("sexta")
	elif(x==6):
		print("sabado")
	else:
		print("A entrada", x ,"eh invalida")
else: 
	print("A entrada", x ,"eh invalida")
-- OUTPUT:
Hoje eh 9 e o dia futuro eh 9
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:15:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Entre com o numero do dia de hoje: "))
y = int(input("Entre com o numero de dias apos hoje: "))
z = x%y
if(0 <= z) and (z <= 6):
	if(x==0):
		print("Hoje eh", x ,"e o dia futuro eh", y)
	elif(x==1):
		print("segunda")
	elif(x==2):
		print("terca")
	elif(x==3): 
		print("quarta")
	elif(x==4):
		print("quinta")
	elif(x==5):
		print("sexta")
	elif(x==6):
		print("sabado")
	else:
		print("A entrada", x ,"eh invalida")
else: 
	print("A entrada", x ,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:15:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Entre com o numero do dia de hoje: "))
y = int(input("Entre com o numero de dias apos hoje: "))
z = x%y
if(0 <= z) and (z <= 6):
	if(x==0):
		print("Hoje eh", x ,"e o dia futuro eh", y)
	elif(x==1):
		print("segunda")
	elif(x==2):
		print("terca")
	elif(x==3): 
		print("quarta")
	elif(x==4):
		print("Hoje eh", x ,"e o dia futuro eh", y)
	elif(x==5):
		print("sexta")
	elif(x==6):
		print("sabado")
	else:
		print("A entrada", x ,"eh invalida")
else: 
	print("A entrada", x ,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:22:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Entre com o numero do dia de hoje: (0/1/2/3/4/5/6) "))
y = int(input("Entre com o numero de dias apos hoje: "))
z = x%y
if(0 <= z) and (z <= 6):
	if(x==0):
		print("Hoje eh", x ,"e o dia futuro eh", y)
	elif(x==1):
		print("segunda")
	elif(x==2):
		print("terca")
	elif(x==3): 
		print("quarta")
	elif(x==4):
		print("Hoje eh", x ,"e o dia futuro eh", y)
	elif(x==5):
		print("sexta")
	elif(x==6):
		print("sabado")
	else:
		print("A entrada", x ,"eh invalida")
else: 
	print("A entrada", x ,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 08:54:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Entre com o numero do dia de hoje: (0/1/2/3/4/5/6) "))
y = int(input("Entre com o numero de dias apos hoje: "))
z = x%y
if(0 <= z) and (z <= 6):
	if(x==0):
		print("Hoje eh", x ,"e o dia futuro eh", y)
	elif(x==1):
		print("segunda")
	elif(x==2):
		print("terca")
	elif(x==3): 
		print("quarta")
	elif(x==4):
		print("Hoje eh", x ,"e o dia futuro eh", y)
	elif(x==5):
		print("sexta")
	elif(x==6):
		print("sabado")
	else:
		print("A entrada", x ,"eh invalida")
else: 
	print("A entrada", x ,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
